--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,81 +1,69 @@
 @charset 'UTF-8';
 
-.banner-content{
-    width: 100vw;
-    height: 75vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-
-}
-.banner{
-    width: 100rem;
-    height: 40rem;
+.slideshow-container {
+    max-width: 1500px;
+    position: relative;
     overflow: hidden;
-    transition: all 0.4s;
-}
-.slides{
-   display: flex;
-   width: 320rem;
-    
-}
-.image img{
-    width: 100rem;
-    height: 35rem;
-}
-#atual{
-
-    transition:all 2s;
-}
-.button{
+    margin: auto;
+ 
+  }
+  
+  .slides {
+    display: flex;
+    transition: all 1s ease-in-out;
+    width: 400%;
+  }
+  
+  .slide {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  
+  .slide img {
+    max-width: 90%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .button {
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     cursor: pointer;
-    padding: 1rem;
+    padding: 1.2rem;
     transition: all 0.4s;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: rgba(255, 255, 255,0);
-
-}
-.button:hover{
-    color: var(--boschblue);
+  }
+  
+  .button:hover {
+    color: lightblue;
     background-color: rgba(0,0,0,0.8);
-}
-#back{
-    top: 60%;
-    left: 18%;
-}
-#next{
-    top: 60%;
-    right: 18%;
-}
-.balls{
-    position: absolute;
-    width: 100%;
+  
+  }
+  #back{
+    top: 40%;
+    left: 5%;
+  }
+  #next{
+    top: 40%;
+    right: 5%;
+  }
+  .indicator-container {
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
-    left: 5%;
-    
-}
-.balls div:hover{
-    transform: scale(1.2);
-}
-.balls div{
-    border: 0.1rem solid var(--boschgreen);
-    border-radius:50%;
-    padding: 0.6rem;
-    margin-right: 0.8rem;
-    cursor: pointer;
+  }
+  
+  .indicator {
+    position: relative;
+    top: 0;
+    width: 20px;
+    margin: 6px 6px;
+    padding: 2px;
+    border-top: 2px solid ;
+    display: inline-block;
     transition: all 0.5s;
-
-}
-
-.imgAtual{
-    transition: all 0.5s;
-    background: var(--boschblue);
-}
+  } 
